--- a/src/app/interaction-reports/all-team-month-dump-report/all-team-month-dump-report.component.html
+++ b/src/app/interaction-reports/all-team-month-dump-report/all-team-month-dump-report.component.html
@@ -198,7 +198,7 @@
             </ng-container>
             <ng-container matColumnDef="createdDate">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Created At</th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.createdDate| date:'yyyy-MM-dd hh:mm a':'UTC'}}
+                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.createdDate| date:'yyyy-MM-dd hh:mm a'}}
                 </td>
             </ng-container>
             <ng-container matColumnDef="agentRemarks">
