--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -295,7 +295,16 @@
               [routerLinkActiveOptions]="{exact:true}" class="nav-link">
               <i class="far fa-list-alt nav-icon"></i>
               <p>
-                Dump Reports
+               Ticket Created Dump Reports
+              </p>
+            </a>
+          </li>
+          <li *hasClaim="'REP_INTERCATION_DUMP_REPORT'" class="nav-item">
+            <a [routerLink]="['/interaction-report/fcr-dump-reports']" routerLinkActive="active"
+              [routerLinkActiveOptions]="{exact:true}" class="nav-link">
+              <i class="far fa-list-alt nav-icon"></i>
+              <p>
+               FCR Dump Reports
               </p>
             </a>
           </li>
@@ -317,7 +326,7 @@
               </p>
             </a>
           </li>
-          <li *hasClaim="'REP_INTERCATION_L2L3_REPORT'" class="nav-item">
+          <li *hasClaim="'REP_INTERCATION_REPPORT'" class="nav-item">
             <a [routerLink]="['/interaction-report/all-teams-reports']" routerLinkActive="active"
               [routerLinkActiveOptions]="{exact:true}" class="nav-link">
               <i class="far fa-list-alt nav-icon"></i>
@@ -378,6 +387,20 @@
               <p>
                 L2 L3 Reports
               </p>
+            </a>
+          </li>
+          <li *hasClaim="'REP_INTERCATION_REPPORT'" class="nav-item">
+            <a [routerLink]="['/interaction-report/survey-reports']" routerLinkActive="active"
+              [routerLinkActiveOptions]="{exact:true}" class="nav-link">
+              <i class="far fa-list-alt nav-icon"></i>
+              <p>Survey Reports</p>
+            </a>
+          </li>
+          <li *hasClaim="'REP_INTERCATION_REPPORT'" class="nav-item">
+            <a [routerLink]="['/interaction-report/grp-tat-reports']" routerLinkActive="active"
+              [routerLinkActiveOptions]="{exact:true}" class="nav-link">
+              <i class="far fa-list-alt nav-icon"></i>
+              <p>GRP TAT Reports</p>
             </a>
           </li>
         </ul>
