--- a/src/app/interaction-reports/reports185-list/reports185-list.component.html
+++ b/src/app/interaction-reports/reports185-list/reports185-list.component.html
@@ -7,7 +7,7 @@
         </div>
     </div>
 </div>
-<div class="loading-shade" *ngIf="dataSource.loading$ | async">
+<div class="loading-shade" *ngIf="(dataSource.loading$ | async) || isLoading">
     <mat-spinner></mat-spinner>
 </div>
 <div class="mb-3">
