--- a/src/app/interaction-reports/resolved-interactions-reports-list/resolved-interactions-reports-list.component.html
+++ b/src/app/interaction-reports/resolved-interactions-reports-list/resolved-interactions-reports-list.component.html
@@ -7,7 +7,7 @@
         </div>
     </div>
 </div>
-<div class="loading-shade" *ngIf="dataSource.loading$ | async">
+<div class="loading-shade" *ngIf="(dataSource.loading$ | async) || isLoading">
     <mat-spinner></mat-spinner>
 </div>
 <div class="mb-3">
@@ -159,8 +159,8 @@
                 <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.agentRemarks}}</td>
             </ng-container>
             <ng-container matColumnDef="currentStatus">
-                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Current Status</th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.currentStatus}}</td>
+                <th class="table-column-300" mat-header-cell *matHeaderCellDef mat-sort-header>Current Status</th>
+                <td class="table-column-300" mat-cell *matCellDef="let row"><div class="statusDiv"> {{row?.currentStatus}}</div></td>
             </ng-container>
             <ng-container matColumnDef="emailId">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Email Id</th>
