--- a/src/app/inventory/advance-search/advance-search.component.html
+++ b/src/app/inventory/advance-search/advance-search.component.html
@@ -7,96 +7,121 @@
         </div>
         <div class="col-md-auto col-sm-auto col">
             <button type="button" (click)="dialogRef.close(false);" class="btn btn-danger mr-2 btn-sm"><i
-                class="fas fa-times-circle"></i>
-            Back </button>
+                    class="fas fa-times-circle"></i>
+                Back </button>
         </div>
     </div>
 </div>
 <div class="p-2">
+    <div class="row">
+        <div class="col-md-2">
+            <div class="form-group">
+                <mat-label for="fromDate">{{'FROM_DATE' | translate}} </mat-label>
+                <input class="form-control" [max]="currentDate" [(ngModel)]="fromDate" [owlDateTimeTrigger]="fromDate1"
+                    [owlDateTime]="fromDate1" placeholder="{{'FROM_DATE' | translate}}">
+                <owl-date-time [pickerType]="'calendar'" #fromDate1></owl-date-time>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div class="form-group">
+                <mat-label for="toDate">{{'TO_DATE' | translate}} </mat-label>
+                <input class="form-control" id="toDate1" [min]="fromDate" [max]="currentDate" [(ngModel)]="toDate"
+                    [owlDateTimeTrigger]="toDate1" [owlDateTime]="toDate1" placeholder="{{'TO_DATE' | translate}}">
+                <owl-date-time [pickerType]="'calendar'" #toDate1></owl-date-time>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="form-group">
+                <mat-label>Type </mat-label>
+                <mat-select [(ngModel)]="selectedType" (selectionChange)="onTypeChange($event)"
+                    placeholder="Select type" class="form-control">
+                    <ng-container *ngFor="let type of typeList">
+                        <mat-option *ngIf="type.name !='Email' " [value]="type?.id">{{type?.name}}</mat-option>
+                    </ng-container>
+                </mat-select>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="form-group">
+                <mat-label> Category</mat-label>
+                <mat-select [disabled]="!selectedType" [(ngModel)]="selectedCategory"
+                    (selectionChange)="onCatChange($event);catInput=''" placeholder="Select Category"
+                    class="form-control">
 
-<div class="row">
-    <div class="col-md-4">
-        <div class="form-group">
-            <mat-label>Type </mat-label>
-            <mat-select [(ngModel)]="selectedType" (selectionChange)="onTypeChange($event)"
-                placeholder="Select type" class="form-control">
-                <ng-container *ngFor="let type of typeList">
-                    <mat-option *ngIf="type.name !='Email' " [value]="type?.id" >{{type?.name}}</mat-option>
-                </ng-container>
-            </mat-select>
+                    <ng-container>
+                        <input type="text" class="form-control sticky-input" [(ngModel)]="catInput"
+                            placeholder="Search Category" autocomplete="off" />
+                        <mat-option [value]="cat?.id"
+                            *ngFor="let cat of categoryList | searchFilter : 'name':catInput">{{cat?.name}}</mat-option>
+                        <mat-option (click)="catInput==''"
+                            *ngIf="(categoryList | searchFilter : 'name':catInput).length === 0">No category
+                            found</mat-option>
+                    </ng-container>
+
+
+                </mat-select>
+            </div>
         </div>
-    </div>
-    <div class="col-md-4">
-        <div class="form-group">
-            <mat-label> Category</mat-label>
-            <mat-select [disabled]="!selectedType" [(ngModel)]="selectedCategory"
-                (selectionChange)="onCatChange($event);catInput=''" placeholder="Select Category" class="form-control">
-               
-                <ng-container>
-                    <input type="text" class="form-control sticky-input" [(ngModel)]="catInput"
-                        placeholder="Search Category" autocomplete="off" />
-                        <mat-option [value]="cat?.id" *ngFor="let cat of categoryList | searchFilter : 'name':catInput">{{cat?.name}}</mat-option>
-                        <mat-option (click)="catInput==''" *ngIf="(categoryList | searchFilter : 'name':catInput).length === 0" >No category found</mat-option>
-                </ng-container>
-               
-                
-            </mat-select>
+        <div class="col-md-4">
+            <div class="form-group">
+                <mat-label> Sub Category </mat-label>
+                <mat-select (selectionChange)="subCatInput=''" [disabled]="!selectedCategory"
+                    [(ngModel)]="selectedSubCategory" placeholder="Select Sub Category" class="form-control">
+                    <ng-container>
+                        <input type="text" class="form-control sticky-input" [(ngModel)]="subCatInput"
+                            placeholder="Search Sub Category" autocomplete="off" />
+                        <mat-option [value]="cat?.id"
+                            *ngFor="let cat of subCategoryList | searchFilter : 'name':subCatInput">{{cat?.name}}</mat-option>
+                        <mat-option (click)="catInput==''"
+                            *ngIf="(subCategoryList | searchFilter : 'name':subCatInput).length === 0">No sub category
+                            found</mat-option>
+                    </ng-container>
+
+                </mat-select>
+            </div>
         </div>
-    </div>
-    <div class="col-md-4">
-        <div class="form-group">
-            <mat-label> Sub Category </mat-label>
-            <mat-select (selectionChange)="subCatInput=''" [disabled]="!selectedCategory" [(ngModel)]="selectedSubCategory" placeholder="Select Sub Category"
-                class="form-control">
-                <ng-container>
-                    <input type="text" class="form-control sticky-input" [(ngModel)]="subCatInput"
-                        placeholder="Search Sub Category" autocomplete="off" />
-                        <mat-option [value]="cat?.id" *ngFor="let cat of subCategoryList | searchFilter : 'name':subCatInput">{{cat?.name}}</mat-option>
-                        <mat-option (click)="catInput==''" *ngIf="(subCategoryList | searchFilter : 'name':subCatInput).length === 0" >No sub category found</mat-option>
-                </ng-container>
-               
-            </mat-select>
+
+        <div class="col-md-4">
+            <div class="form-group">
+                <mat-label> Team </mat-label>
+                <mat-select [(ngModel)]="selectedTeam" placeholder="Select Team" class="form-control" multiple>
+                    <mat-option [disabled]="team?.name == 'L0 Email'" [value]="team?.id"
+                        *ngFor="let team of teamList">{{team?.name}}</mat-option>
+                </mat-select>
+            </div>
         </div>
-    </div>
-  
-    <div class="col-md-4">
-        <div class="form-group">
-            <mat-label> Team </mat-label>
-            <mat-select [(ngModel)]="selectedTeam" placeholder="Select Team" class="form-control" multiple>
-                <mat-option [disabled]="team?.name == 'L0 Email'" [value]="team?.id" *ngFor="let team of teamList">{{team?.name}}</mat-option>
-            </mat-select>
+        <div class="col-md-4">
+            <div class="form-group">
+                <mat-label for="search">GSTN</mat-label>
+                <input type="text" [(ngModel)]="gstn" maxlength="20" placeholder="Search By GST no."
+                    class="form-control">
+            </div>
         </div>
-    </div>
-    <div class="col-md-4">
-        <div class="form-group">
-            <mat-label for="search">GSTN</mat-label>
-                <input type="text" [(ngModel)]="gstn" maxlength="20" placeholder="Search By GST no." class="form-control" >
+        <div class="col-md-4">
+            <div class="form-group">
+                <mat-label for="search">Email Id</mat-label>
+                <input type="text" [(ngModel)]="emailId" placeholder="Search By Email" class="form-control">
+            </div>
         </div>
-    </div>
-    <div class="col-md-4">
-        <div class="form-group">
-            <mat-label for="search">Email Id</mat-label>
-                <input type="text" [(ngModel)]="emailId"  placeholder="Search By Email" class="form-control" >
+        <div class="col-md-4">
+            <div class="form-group">
+                <mat-label for="search">Mobile no.</mat-label>
+                <input type="text" [(ngModel)]="mobileNo" maxlength="10" placeholder="Search By Mobile no."
+                    class="form-control">
+            </div>
         </div>
-    </div>
-    <div class="col-md-4">
-        <div class="form-group">
-            <mat-label for="search">Mobile no.</mat-label>
-            <input type="text" [(ngModel)]="mobileNo" maxlength="10"  placeholder="Search By Mobile no." class="form-control" >
+        <div class="col-md-4">
+            <button type="button" (click)="searchFilter()" class="btn btn-success btn-sm mx-2 button-margin"><i
+                    class="fas fa-search"></i>
+                Search</button>
+            <button type="button" (click)="onClear();" class="btn btn-danger btn-sm button-margin"><i
+                    class="fas fa-times-circle"></i>
+                Clear </button>
         </div>
-    </div>
-    <div class="col-md-4">
-        <button type="button" (click)="searchFilter()" class="btn btn-success btn-sm mx-2 button-margin"><i
-            class="fas fa-search"></i>
-        Search</button>
-        <button type="button" (click)="onClear();" class="btn btn-danger btn-sm button-margin"><i
-            class="fas fa-times-circle"></i>
-        Clear </button>
+
     </div>
 
-</div>
-
-<!-- <div class="filterButtons text-center w-100">
+    <!-- <div class="filterButtons text-center w-100">
     <button type="button" (click)="searchFilter()" class="btn btn-success btn-sm mx-2 button-margin"><i
         class="fas fa-search"></i>
     Search</button>
