--- a/src/app/inventory/l0-email/l0-email.component.html
+++ b/src/app/inventory/l0-email/l0-email.component.html
@@ -193,13 +193,13 @@
             </ng-container>
             <ng-container matColumnDef="createdat">
                 <th class="table-column-250" mat-header-cell *matHeaderCellDef mat-sort-header>Created At</th>
-                <td class="table-column-250" mat-cell *matCellDef="let row"> {{row.createDateTime | date:'yyyy-MM-dd hh:mm:ss a':'UTC'}}
+                <td class="table-column-250" mat-cell *matCellDef="let row"> {{row.createDateTime | date:'yyyy-MM-dd hh:mm:ss a'}}
                 </td>
             </ng-container>
             <ng-container matColumnDef="footer">
                 <td mat-footer-cell [attr.colspan]="displayedColumns.length" *matFooterCellDef>
                     <mat-paginator [length]="inventoryResource.totalCount" [pageSize]="inventoryResource.pageSize"  [dir]="langDir"
-                        [pageSizeOptions]="[10, 20, 30]">
+                        [pageSizeOptions]="[10, 20,30,40,50]">
                     </mat-paginator>
                 </td>
             </ng-container>
