--- a/src/app/inventory/survey-questions/survey-questions.component.html
+++ b/src/app/inventory/survey-questions/survey-questions.component.html
@@ -1,12 +1,15 @@
 <form [formGroup]="surveyForm">
     <div class="my-3">
-        <h5>Survey Questions</h5>
+        <h5>Survey Questions <span class="mx-2" *ngIf="InteractionDetail?.statusId!= 3">(Interaction is not resolved state)</span></h5>
     </div>
+    <div class="loading-shade" *ngIf="isLoading">
+        <mat-spinner></mat-spinner>
+      </div>
     <div class="row">
         <div class="col-md-4">
             <div class="form-group">
                 <mat-label>Q1:</mat-label>
-                <input type="text" [disabled]="true" class="form-control" placeholder="Please enter Q1" formcontrolName="q1">
+                <input type="text" [disabled]="true" class="form-control" [value]="this.surveyData?.accessibility">
                 <mat-error [dir]="langDir" *ngIf="surveyForm.get('q1').touched && surveyForm.get('q1').errors?.required"
                     class="text-danger">
                     Please enter Question 1
@@ -16,7 +19,7 @@
         <div class="col-md-4">
             <div class="form-group">
                 <mat-label>Q2:</mat-label>
-                <input type="text" [disabled]="true" class="form-control" placeholder="Please enter Q2" formcontrolName="q2">
+                <input type="text" [disabled]="true" class="form-control" [value]="this.surveyData?.knowledge">
                 <mat-error [dir]="langDir" *ngIf="surveyForm.get('q2').touched && surveyForm.get('q2').errors?.required"
                     class="text-danger">
                     Please enter Question 2
@@ -26,7 +29,7 @@
         <div class="col-md-4">
             <div class="form-group">
                 <mat-label>Q3:</mat-label>
-                <input type="text" [disabled]="true" class="form-control" placeholder="Please enter Q3" formcontrolName="q3">
+                <input type="text" [disabled]="true" class="form-control" [value]="this.surveyData?.resolution">
                 <mat-error [dir]="langDir" *ngIf="surveyForm.get('q3').touched && surveyForm.get('q3').errors?.required"
                     class="text-danger">
                     Please enter Question 3
@@ -36,7 +39,7 @@
         <div class="col-md-4">
             <div class="form-group">
                 <mat-label>Q4:</mat-label>
-                <input type="text" [disabled]="true" class="form-control" placeholder="Please enter Q4" formcontrolName="q4">
+                <input type="text" [disabled]="true" class="form-control" [value]="this.surveyData?.experience">
                 <mat-error [dir]="langDir" *ngIf="surveyForm.get('q4').touched && surveyForm.get('q4').errors?.required"
                     class="text-danger">
                     Please enter Question 4
@@ -46,7 +49,7 @@
         <div class="col-md-4">
             <div class="form-group">
                 <mat-label>Q5:</mat-label>
-                <input type="text"[disabled]="true" class="form-control" placeholder="Please enter Q5" formcontrolName="q5">
+                <input type="text"[disabled]="true" class="form-control" [value]="this.surveyData?.timeliness">
                 <mat-error [dir]="langDir" *ngIf="surveyForm.get('q5').touched && surveyForm.get('q5').errors?.required"
                     class="text-danger">
                     Please enter Question 5
@@ -56,7 +59,7 @@
         <div class="col-md-4">
             <div class="form-group">
                 <mat-label>Q6:</mat-label>
-                <input type="text" [disabled]="true" class="form-control" placeholder="Please enter Q6" formcontrolName="q6">
+                <input type="text" [disabled]="true" class="form-control" [value]="this.surveyData?.overallFeedback">
                 <mat-error [dir]="langDir" *ngIf="surveyForm.get('q6').touched && surveyForm.get('q6').errors?.required"
                     class="text-danger">
                     Please enter Question 6
@@ -66,7 +69,7 @@
         <div class="col-md-4">
             <div class="form-group">
                 <mat-label>Q7:</mat-label>
-                <input type="text" [disabled]="true" class="form-control" placeholder="Please enter Q7" formcontrolName="q7">
+                <input type="text" [disabled]="true" class="form-control" [value]="this.surveyData?.additionalFeedback">
                 <mat-error [dir]="langDir" *ngIf="surveyForm.get('q7').touched && surveyForm.get('q7').errors?.required"
                     class="text-danger">
                     Please enter Question 7
@@ -76,8 +79,8 @@
         <div class="col-md-4">
             <div class="form-group">
                 <mat-label>Total Survey Value:</mat-label>
-                <input type="text" [disabled]="true" class="form-control" placeholder="Please enter total survey value"
-                    formcontrolName="totalSurveyValue">
+                <input type="text" [disabled]="true" class="form-control"
+                    [value]="this.surveyData?.totalServeyValue">
                 <mat-error [dir]="langDir"
                     *ngIf="surveyForm.get('totalSurveyValue').touched && surveyForm.get('totalSurveyValue').errors?.required"
                     class="text-danger">
@@ -88,8 +91,8 @@
         <div class="col-md-4">
             <div class="form-group">
                 <mat-label>CSAT Category:</mat-label>
-                <input type="text" [disabled]="data=='fcr'" class="form-control" placeholder="Please enter csat category"
-                    formcontrolName="csatCategory">
+                <input type="text" [disabled]="data=='fcr'" class="form-control"
+                    [value]="(this.surveyData?.CSATCategory || this.surveyData?.cSATCategory) || ''">
                 <mat-error [dir]="langDir"
                     *ngIf="surveyForm.get('csatCategory').touched && surveyForm.get('csatCategory').errors?.required"
                     class="text-danger">
@@ -100,7 +103,7 @@
         <!-- <div class="col-md-4">
     <div class="form-group">
         <mat-label>Sub Category</mat-label>
-        <mat-select [dir]="langDir" formControlName="subcategoryId" placeholder="Select Sub Category"
+        <mat-select [dir]="langDir" [value]="subcategoryId" placeholder="Select Sub Category"
             class="form-control">
             <mat-option *ngFor="let subCat of subCategoryList" [value]="subCat.id">
                 {{subCat.name}}
